<resources>
    <string name="app_name">quiz aplikasi portal berita</string>
    <string name="read_more">Baca Selengkapnya...</string>
    <string name="main_title">Berita Hari Ini</string>
    <string name="date">Jum\'at 10 Oktober 2018</string>
    <string name="judul1">BTS Raih Penghargaan, ARMY Sangat Bangga</string>
    <string name="Judul2">Jaringan 4G Tri kini telah merambah Sulawesi</string>
    <string name="judul3">PT. Semen Indonesia Raih Keuntungan Hingga 7 Milyar</string>
</resources>
